# kube-whisper-hybrid

./: .gitignore  README.md  deepseek_langchain.py  pyproject.toml  sd.py  test_stt_mic.py  test_stt_pc.py
.github/workflows/: ci.yml  release.yml
specs/: add-audio-module.md  add-function-executer-spec.md  add-text-to-speech.md  add_kubernetes_tools-spec.md  function-registry-spec-v0.md
src/kube_whisper/: __init__.py  assistant.py  cli.py  function_registry.py
src/kube_whisper/audio/: __init__.py  microphone.py
src/kube_whisper/k8s/: k8s_tools.py
src/kube_whisper/llm/: __init__.py  deepseek.py
src/kube_whisper/registry/: __init__.py  function_registry.py
src/kubewhisper/: __init__.py  assistant.py  cli.py  test_all.py
src/kubewhisper/audio/: elevenlabs_speaker.py  whisper_transcriber.py
src/kubewhisper/k8s/: __init__.py  k8s_tools.py
src/kubewhisper/llm/: deepseek.py
src/kubewhisper/registry/: function_executor.py  function_registry.py
tests/: test_assistant.py  test_deepseek_llm.py  test_function_registry.py
