[project]
name = "kubewhisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "aiohttp>=3.11.11",
    "elevenlabs>=1.50.5",
    "kubernetes>=32.0.0",
    "langchain-openai>=0.3.2",
    "mlx-whisper>=0.4.1",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.0.1",
    "soundcard>=0.4.3",
    "sounddevice>=0.5.1",
    "speechrecognition>=3.14.1",
    "pynput>=1.7.6",
]

[project.scripts]
kubewhisper = "kubewhisper.cli:main"

[tool.hatch.version]
path = "src/kubewhisper/__about__.py"

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pytest-asyncio>=0.25.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubewhisper"]

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default
lint.select = ["E", "F"]
# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Python version compatibility
target-version = "py310"
# Line length matches black's default
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]